<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_new_user"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.enesimona30.licenta1.NewUserActivity"
    android:background="@drawable/background2">

    <TextView
        android:text="@string/new_user_cont_nou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="34dp"
        android:layout_marginStart="@dimen/new_user_activity_start_margin"
        android:layout_marginTop="7dp"
        android:id="@+id/tv_new_user_adauga_cont"
        android:textSize="20dp"
        android:textStyle="bold"/>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_new_user_adauga_cont"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:id="@+id/til_new_user_nume"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_new_user_nume"
            android:hint="@string/new_user_nume" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_new_user_nume"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:id="@+id/til_new_user_prenume">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_new_user_prenume"
            android:hint="@string/new_user_prenume" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_new_user_prenume"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:id="@+id/til_new_user_data_nasterii">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_new_user_data_nasterii"
            android:hint="@string/new_user_data_nasterii" />
    </android.support.design.widget.TextInputLayout>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_new_user_data_nasterii"
        android:layout_alignLeft="@+id/til_new_user_data_nasterii"
        android:layout_alignStart="@+id/til_new_user_data_nasterii"
        android:layout_marginTop="5dp"
        android:id="@+id/rg_new_user_sex">

        <RadioButton
            android:text="@string/new_user_sex_feminin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_new_user_feminin"
            android:layout_weight="1" />

        <RadioButton
            android:text="@string/new_user_sex_masculin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rb_new_user_masculin"
            android:layout_weight="1" />
    </RadioGroup>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rg_new_user_sex"
        android:layout_alignLeft="@+id/rg_new_user_sex"
        android:layout_alignStart="@+id/rg_new_user_sex"
        android:layout_marginTop="5dp"
        android:id="@+id/til_new_user_email">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_new_user_email"
            android:hint="@string/new_user_email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_new_user_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:id="@+id/til_new_user_telefon"
        >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_new_user_telefon"
            android:hint="@string/new_user_telefon" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_new_user_telefon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:id="@+id/til_new_user_nume_utilizator">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_user_nume_utilizator"
            android:id="@+id/et_new_user_nume_utilizator"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_new_user_nume_utilizator"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:id="@+id/til_new_user_parola">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_new_user_parola"
            android:hint="@string/new_user_parola"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_new_user_parola"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:id="@+id/til_new_user_confima_parola">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_new_user_confirma_parola"
            android:hint="@string/new_user_confirma_parola"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/new_user_adauga_cont_nou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/til_new_user_confima_parola"
        android:layout_marginTop="5dp"
        android:id="@+id/btn_new_user_adauga_user"
        android:background="@drawable/custom_button1"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"/>


</RelativeLayout>

</ScrollView>