<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.enesimona30.licenta1.LoginActivity"
    android:background="@drawable/background2">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/login_autentificare"
        android:textSize="20dp"
        android:id="@+id/tv_login_autentificare" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_login_autentificare"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="71dp"
        android:id="@+id/til_login_email">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_nume_utilizator"
            android:id="@+id/et_login_username"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/til_login_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_parola"
            android:inputType="textPassword"
            android:id="@+id/et_login_parola"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:text="@string/login_trimite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="116dp"
        android:id="@+id/btn_login_trimite"
        android:background="@drawable/custom_button1"/>

    <TextView
        android:text="@string/login_recuperare_parola"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="59dp"
        android:clickable="true"
        android:textSize="15dp"
        android:textColor="@color/colorRecuperareParola"
        android:id="@+id/tv_login_recuperare_parola" />


</RelativeLayout>
