<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.enesimona30.licenta1.MainActivity">

    <TextView
        android:id="@+id/tv_main_login_create_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="65dp"
        android:textSize="26dp"
        android:gravity="center"
        android:textStyle="bold"
        android:padding="5dp"
        android:text="@string/main_autentificare_inregistrare" />

    <Button
        android:id="@+id/btn_main_autentificare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="61dp"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="40dp"
        android:background="@drawable/custom_button1"
        android:text="@string/main_autentificare"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"/>

    <Button
        android:id="@+id/btn_main_inregistrare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btn_main_autentificare"
        android:layout_marginEnd="40dp"
        android:layout_marginRight="40dp"
        android:background="@drawable/custom_button1"
        android:text="@string/main_inregistrare"
        android:paddingRight="15dp"
        android:paddingLeft="15dp"/>


</RelativeLayout>
